--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "17.0.2",
     "react-router": "^6.0.2",
     "sweetalert": "2.1.2",
-    "copy-text-to-clipboard": "3.0.1"
+    "copy-text-to-clipboard": "3.0.1",
+    "next-pwa": "5.4.1"
   },
   "devDependencies": {
     "eslint": "7",
