--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "3.5.0",
     "framer-motion": "^4",
     "next": "12.0.5",
+    "node-fetch": "^2.6.1",
     "prisma": "3.5.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
