--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@prisma/client": "3.5.0",
+    "@prisma/client": "^3.5.0",
     "framer-motion": "^4",
-    "next": "12.0.5",
-    "node-fetch": "^2.6.7",
-    "prisma": "3.5.0",
+    "next": "^12.0.5",
+    "node-fetch": "^3.2.0",
+    "prisma": "^3.5.0",
     "query-string": "^7.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
-    "sweetalert": "2.1.2",
-    "copy-text-to-clipboard": "3.0.1",
-    "next-pwa": "5.4.1",
+    "sweetalert": "^2.1.2",
+    "copy-text-to-clipboard": "^3.0.1",
+    "next-pwa": "^5.4.1",
     "lru-cache": "^6.0.0"
   },
   "devDependencies": {
