--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@prisma/client": "^3.5.0",
+    "copy-text-to-clipboard": "^3.0.1",
     "framer-motion": "^4",
+    "lru-cache": "^6.0.0",
     "next": "^12.0.5",
     "node-fetch": "^3.2.0",
     "prisma": "^3.5.0",
@@ -22,10 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
-    "sweetalert": "^2.1.2",
-    "copy-text-to-clipboard": "^3.0.1",
-    "next-pwa": "^5.4.1",
-    "lru-cache": "^6.0.0"
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "eslint": "7",
