--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-text-to-clipboard": "^3.0.1",
     "framer-motion": "^4",
     "lru-cache": "^6.0.0",
+    "nanoid": "^3.2.0",
     "next": "^12.0.5",
     "node-fetch": "^3.2.0",
     "prisma": "^3.5.0",
