--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "@prisma/client": "^3.5.0",
     "copy-text-to-clipboard": "^3.0.1",
+    "fetch": "^1.1.0",
     "framer-motion": "^4",
     "lru-cache": "^6.0.0",
     "nanoid": "^3.2.0",
@@ -25,7 +26,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "url-encode-decode": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "7",
