--- a/package.json
+++ b/package.json
@@ -8,29 +8,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.2",
+    "@babel/core": "^7.17.10",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@prisma/client": "^3.5.0",
+    "@prisma/client": "^3.14.0",
     "copy-text-to-clipboard": "^3.0.1",
     "fetch": "^1.1.0",
-    "framer-motion": "^4",
-    "lru-cache": "^6.0.0",
-    "nanoid": "^3.2.0",
-    "next": "^12.1.0",
-    "node-fetch": "^3.2.0",
-    "prisma": "^3.5.0",
-    "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.0.2",
+    "framer-motion": "^6",
+    "lru-cache": "^7.10.1",
+    "nanoid": "^3.3.4",
+    "next": "^12.1.6",
+    "node-fetch": "^3.2.4",
+    "prisma": "^3.14.0",
+    "query-string": "^7.1.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router": "^6.3.0",
+    "request-ip": "^2.1.3",
     "sweetalert": "^2.1.2",
     "url-encode-decode": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "cross-env": "^7.0.3",
+    "eslint": "8",
+    "eslint-config-next": "12.1.6"
   }
 }
